--- a/style.css
+++ b/style.css
@@ -607,7 +607,7 @@ footer {
         .home-content h4 {
           font-size: 0.8rem;
           width: fit-content;
-          margin-top: 0;
+          margin-top: 0.1rem;
           margin-right: 9rem;
         }
 
@@ -621,6 +621,10 @@ footer {
             margin-left: 0;
             margin-top: 0;
   
+        }
+
+        .contactText, .text {
+          font-size: 0.8rem;
         }
 
         .btn-box a {
